# TradingAlgorithm

.github/workflows/: ci.yml
docs/reports/20250830_232930/: report.html
trader_repo/: Dockerfile  Makefile  README.md  pyproject.toml
trader_repo/config/: settings.yaml
trader_repo/notebooks/: 01_quickstart.ipynb  02_tuning.ipynb
trader_repo/reports/: README.txt
trader_repo/scripts/: fetch_data.py  run_backtest.py  run_live.py
trader_repo/tests/: test_metrics.py  test_smoke.py  test_strategies.py
trader_repo/trader/: __init__.py  __main__.py  config.py
trader_repo/trader/backtest/: costs.py  engine.py  metrics.py  report.py  tuner.py  walkforward.py
trader_repo/trader/data_sources/: alpaca.py  base.py  yahoo.py
trader_repo/trader/live/: broker.py  executor.py  scheduler.py  stream.py
trader_repo/trader/risk/: rules.py  sizing.py
trader_repo/trader/strategies/: base.py  rsi_reversion.py  sma_crossover.py  vol_breakout.py
trader_repo/trader/utils/: logging.py  paths.py
